# shashki

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  ConsoleGame.cpp  ConsoleGame.h  ConsoleGame.hpp  FastGame.cpp  FastGame.generated.inc  FastGame.h  FastGame.hpp  Game.h  Game.hpp  GameTypes.h  GameTypes.hpp  HumanPlayer.cpp  HumanPlayer.h  Logging.h  Move.h  Move.hpp  Player.h  Player.hpp  RandomPlayer.cpp  RandomPlayer.h  fast_game_generate.py
src/tests/: CMakeLists.txt  GameTests.cpp
